<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<PreferenceCategory android:title="General">-->
        <!--<EditTextPreference-->
            <!--android:defaultValue="@string/default_gallery_storage"-->
            <!--android:key="@string/key_gallery_name"-->
            <!--android:summary="@string/default_gallery_storage"-->
            <!--android:title="@string/title_gallery_storage" />-->

        <!--<CheckBoxPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="@string/key_upload_over_wifi"-->
            <!--android:summary="@string/summary_upload_over_wifi"-->
            <!--android:title="@string/title_auto_upload" />-->

        <!--&lt;!&ndash;<ListPreference&ndash;&gt;-->
            <!--&lt;!&ndash;android:defaultValue="3"&ndash;&gt;-->
            <!--&lt;!&ndash;android:dialogTitle="@string/title_upload_quality"&ndash;&gt;-->
            <!--&lt;!&ndash;android:entries="@array/pref_upload_quality_entries"&ndash;&gt;-->
            <!--&lt;!&ndash;android:entryValues="@array/pref_upload_quality_values"&ndash;&gt;-->
            <!--&lt;!&ndash;android:key="@string/key_upload_quality"&ndash;&gt;-->
            <!--&lt;!&ndash;android:summary="@string/summary_upload_video_quality"&ndash;&gt;-->
            <!--&lt;!&ndash;android:title="@string/title_upload_quality" />&ndash;&gt;-->

    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory android:title="@string/pref_title_notifications">-->

        <!--<SwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="@string/notifications_new_message"-->
            <!--android:title="@string/title_new_notification_sound" />-->

        <!--<RingtonePreference-->
            <!--android:defaultValue="content://settings/system/notification_sound"-->
            <!--android:dependency="notifications_new_message"-->
            <!--android:key="@string/key_notifications_new_message_ringtone"-->
            <!--android:ringtoneType="notification"-->
            <!--android:summary="@string/summary_choose_ringtone"-->
            <!--android:title="@string/pref_title_ringtone" />-->

        <!--<SwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="@string/key_vibrate"-->
            <!--android:summary="@string/summary_vibrate"-->
            <!--android:title="@string/title_vibrate" />-->
    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:title="@string/title_app_info"
            android:summary="@string/summary_app_info"/>

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference
            android:key="terms"
            android:title="@string/title_terms">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>