<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:icon="@drawable/ic_person"
            android:id="@+id/action_profile"
            android:title="@string/profile" />

        <!--<item-->
            <!--android:icon="@drawable/ic_people"-->
            <!--android:id="@+id/action_people"-->
            <!--android:title="People" />-->

        <!--<item-->
            <!--android:icon="@drawable/ic_wallet"-->
            <!--android:id="@+id/action_wallet"-->
            <!--android:title="Wallet" />-->


        <item
            android:icon="@drawable/ic_info"
            android:id="@+id/action_about"
            android:title="@string/about" />

        <item
            android:icon="@drawable/ic_settings"
            android:id="@+id/action_settings"
            android:title="@string/settings" />


        <item
            android:icon="@drawable/ic_feedback"
            android:id="@+id/action_send_feedback"
            android:title="@string/sendfeedback" />

    </group>

    <item android:title="@string/extras">
        <menu>

            <item
                android:icon="@drawable/ic_share"
                android:id="@+id/action_share_andeqa"
                android:title="@string/share" />

        </menu>
    </item>

</menu>
