<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_choose_trade_method"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cinggl.cinggl.ifair.ChooseTradeMethodActivity"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_gravity="top"
        app:titleTextAppearance="@style/toolbarTextSize"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@android:color/white"/>


    <ScrollView
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:text="Cingle Backing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/cingleBackingRadioButton"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:text="@string/choose_cingle_backing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:layout_marginTop="10dp"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/cingleBackingRadioButton"
                    android:id="@+id/chooseHouseToTradeCingleTextView"
                    android:layout_centerInParent="true" />


                <View
                    android:layout_below="@+id/chooseHouseToTradeCingleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorDivider"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:text="Cingle Lacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/cingleLacingRadioButton"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:text="@string/choose_cingle_lacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:layout_marginTop="10dp"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/cingleLacingRadioButton"
                    android:id="@+id/cingleLacingTextView"
                    android:layout_centerInParent="true" />


                <View
                    android:layout_below="@+id/cingleLacingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorDivider"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:text="Cingle Leasing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cingleLeasingRadioButton"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:text="@string/choose_cingle_leasing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:layout_marginTop="10dp"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/cingleLeasingRadioButton"
                    android:id="@+id/cingleLeasingTextView"
                    android:layout_centerInParent="true" />


                <View
                    android:layout_below="@+id/cingleLeasingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorDivider"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:text="Cingle Selling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/cingleSellingRadioButton"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:text="@string/choose_cingle_selling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:layout_marginTop="10dp"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/cingleSellingRadioButton"
                    android:id="@+id/cingleSellingTextView"
                    android:layout_centerInParent="true" />


                <View
                    android:layout_below="@+id/cingleSellingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorDivider"/>

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
